# prism-db

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  deny.toml  dist-workspace.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  linux-packages.yml  npm-publish.yml  nuget-publish.yml  pages-repo.yml  php-split.yml  pypi-publish.yml  release.yml
crates/prism-bench/: Cargo.toml
crates/prism-bench/src/: lib.rs  main.rs
crates/prism-buffer/: Cargo.toml
crates/prism-buffer/src/: error.rs  lib.rs  pool.rs
crates/prism-cli/: Cargo.toml
crates/prism-cli/wix/: main.wxs
crates/prism-client/: Cargo.toml
crates/prism-client/src/: lib.rs
crates/prism-client/tests/: roundtrip.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: bank.rs  error.rs  lib.rs  lock.rs  record.rs  recovery.rs  store.rs  txn.rs  visibility.rs
crates/prism-doc/: Cargo.toml
crates/prism-doc/src/: error.rs  lib.rs  value.rs
crates/prism-fsck/: Cargo.toml
crates/prism-fsck/src/: lib.rs  main.rs
crates/prism-index/: Cargo.toml
crates/prism-index/src/: btree.rs  error.rs  lib.rs
crates/prism-kv/: Cargo.toml
crates/prism-kv/src/: lib.rs
crates/prism-protocol/: Cargo.toml
crates/prism-protocol/src/: codec.rs  data.rs  error.rs  frame.rs  lib.rs  message.rs
crates/prism-sdk-node/: Cargo.toml
crates/prism-sdk-node/src/: lib.rs
crates/prism-server/: Cargo.toml
crates/prism-server/src/: audit.rs  auth.rs  catalog.rs  database.rs  dump.rs  error.rs  instance.rs  lib.rs  server.rs  session.rs  tls.rs
crates/prism-server/tests/: audit.rs  authz.rs  cross_model.rs  dispatch.rs  dump.rs  durability.rs  multidb.rs  network.rs  tls.rs
crates/prism-shell/: Cargo.toml
crates/prism-shell/src/: lib.rs  main.rs
crates/prism-sql/: Cargo.toml
crates/prism-sql/src/: catalog.rs  error.rs  lib.rs  types.rs
crates/prism-storage/: Cargo.toml
crates/prism-storage/src/: checksum.rs  db_header.rs  disk.rs  error.rs  lib.rs  page.rs
crates/prism-testkit/: Cargo.toml
crates/prism-testkit/src/: fault.rs  lib.rs  rng.rs  scenario.rs  tempdir.rs
crates/prism-wal/: Cargo.toml
crates/prism-wal/examples/: wal_demo.rs
crates/prism-wal/src/: error.rs  lib.rs  record.rs  segment.rs  wal.rs
deploy/: prismd.conf  prismd.service  prismdb-archive-keyring.asc
deploy/debian/: postinst  postrm  prerm
deploy/pages/: index.html
docs/: Design.psd  README.md  project-report.docx
docs/adr/: 0001-language-rust.md  0002-page-based-storage.md  0003-physiological-wal-aries.md  0004-mvcc-snapshot-isolation.md  0005-unified-record-format.md  0006-single-wal-cross-model.md  0007-clock-sweep-buffer-pool.md  0008-binary-wire-protocol.md  0009-napi-rs-sdk.md  0010-volcano-executor.md  README.md
docs/architecture/: data-flow.md  module-layout.md  system-architecture.md  threat-model.md
docs/components/: btree.md  buffer-pool.md  catalog.md  disk-manager.md  document-engine.md  hash-index.md  kv-engine.md  lock-manager.md  mvcc.md  network-server.md  recovery.md  sql-engine.md  transaction-manager.md  wal.md
docs/operations/: benchmarking.md  build-and-dev.md  fault-injection.md  install.md  observability.md  releasing.md  testing-strategy.md
docs/overview/: executive-summary.md  glossary.md  roadmap.md  vision-and-scope.md
docs/project/: code-review-guide.md  engineering-standards.md  milestones.md  risk-register.md
docs/research/: references.md
docs/specs/: page-format.md  record-format.md  sdk-api.md  shell.md  wal-record-format.md  wire-protocol.md
sdks/: README.md
sdks/c/: .gitignore  Makefile  README.md
sdks/c/examples/: quickstart.c
sdks/c/include/: prism.h
sdks/c/src/: prism.c
sdks/c/tests/: test_codec.c
sdks/cpp/: Makefile  README.md
sdks/cpp/examples/: quickstart.cpp
sdks/cpp/include/prism/: prism.hpp
sdks/cpp/src/: prism.cpp
sdks/cpp/tests/: test_codec.cpp
sdks/dotnet/: PrismDb.slnx  README.md
sdks/dotnet/examples/Quickstart/: Program.cs  Quickstart.csproj
sdks/dotnet/src/PrismDb/: Client.cs  Codec.cs  Connection.cs  Document.cs  Errors.cs  Messages.cs  PrismDb.csproj  Query.cs  Update.cs  Value.cs
sdks/dotnet/tests/PrismDb.Tests/: PrismDb.Tests.csproj  Program.cs
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/dev/prism/client/: Client.java  Codec.java  ColumnDesc.java  Connection.java  DocQuery.java  DocUpdate.java  Document.java  DocumentCodec.java  ErrorCode.java  ErrorInfo.java  Errors.java  Messages.java  ObjectId.java  PrismException.java  ProtocolException.java  Q.java  ServerException.java  SqlResult.java  Tag.java  Typed.java  U.java  ValueCodec.java  Values.java
sdks/java/src/main/java/dev/prism/examples/: Quickstart.java
sdks/java/src/test/java/dev/prism/client/: CodecTest.java
sdks/node/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
sdks/node/examples/: quickstart.ts
sdks/node/src/: client.ts  codec.ts  connection.ts  document.ts  errors.ts  index.ts  messages.ts  query.ts  update.ts  value.ts
sdks/node/test/: codec.test.ts  e2e.test.ts  protocol.test.ts
sdks/php/: .gitattributes  README.md  composer.json
sdks/php/examples/: quickstart.php
sdks/php/src/: Client.php  Codec.php  Connection.php  Document.php  Errors.php  Messages.php  Query.php  Update.php  Value.php
sdks/php/tests/: run.php
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/examples/: quickstart.py
sdks/python/prismdb/: __init__.py  _codec.py  client.py  connection.py  document.py  errors.py  messages.py  query.py  update.py  value.py
sdks/python/tests/: test_codec.py
