# Prism — workspace manifest.
# This file is the source of truth for crates, shared dependencies, and build
# profiles. Crate dependency direction is downward only; see
# docs/architecture/module-layout.md.

[workspace]
resolver = "2"
members = [
    "crates/prism-storage",
    "crates/prism-wal",
    "crates/prism-buffer",
    "crates/prism-core",
    "crates/prism-index",
    "crates/prism-sql",
    "crates/prism-doc",
    "crates/prism-kv",
    "crates/prism-protocol",
    "crates/prism-server",
    "crates/prism-client",
    "crates/prism-shell",
    "crates/prism-sdk-node",
    "crates/prism-fsck",
    "crates/prism-bench",
    "crates/prism-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/prism-db/prism"
authors = ["The Prism authors"]

# Internal crates — referenced by members via `{ workspace = true }`. Each carries
# an explicit version alongside its path: the path drives local builds, the
# version keeps the deps concrete (not wildcards) for tooling and publishing.
[workspace.dependencies]
prism-storage = { path = "crates/prism-storage", version = "0.1.0" }
prism-wal = { path = "crates/prism-wal", version = "0.1.0" }
prism-buffer = { path = "crates/prism-buffer", version = "0.1.0" }
prism-core = { path = "crates/prism-core", version = "0.1.0" }
prism-index = { path = "crates/prism-index", version = "0.1.0" }
prism-sql = { path = "crates/prism-sql", version = "0.1.0" }
prism-doc = { path = "crates/prism-doc", version = "0.1.0" }
prism-kv = { path = "crates/prism-kv", version = "0.1.0" }
prism-protocol = { path = "crates/prism-protocol", version = "0.1.0" }
prism-server = { path = "crates/prism-server", version = "0.1.0" }
prism-client = { path = "crates/prism-client", version = "0.1.0" }
prism-testkit = { path = "crates/prism-testkit", version = "0.1.0" }

# Shared external crates are pre-staged here so versions stay consistent across
# the workspace. They are NOT downloaded until a member actually depends on one,
# so the Step 0 skeleton (no external deps yet) builds fully offline.
# Wire these in per phase as components are implemented.
bytes = "1"
crc32fast = "1.4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
parking_lot = "0.12"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
proptest = "1"
# default-features off drops `recursive-protection`, whose transitive build-dep
# (ar_archive_writer) requires Rust > our pinned 1.85 MSRV. Re-enabling it (deep-
# nesting stack-overflow protection) is an MSRV bump and needs an ADR.
sqlparser = { version = "0.54", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["full"] }
scrypt = "0.11"
# TLS via rustls with the ring crypto backend (no aws-lc C toolchain). ring's
# license is clarified in deny.toml.
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pki-types = { version = "1", features = ["std"] }

# ── Build profiles ─────────────────────────────────────────────────────────
# Mirrors docs/operations/build-and-dev.md.

[profile.dev]
opt-level = 0
debug = true

# scrypt's work factor is punishing at opt-level 0 (the salsa20 core dominates
# password hashing). Optimize just the crypto crates in dev/test builds so auth
# stays fast without weakening parameters or making our own code harder to debug.
[profile.dev.package.scrypt]
opt-level = 3
[profile.dev.package.salsa20]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.pbkdf2]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"   # symbols for prod debugging without size blowup

[profile.bench]
opt-level = 3
lto = "thin"                 # faster than fat LTO for benchmark iteration
codegen-units = 1
debug = true

# Production binaries that need full debug info.
[profile.release-with-debug]
inherits = "release"
debug = true

# cargo-fuzz targets (see docs/operations/testing-strategy.md).
[profile.fuzz]
inherits = "release"
debug-assertions = true
overflow-checks = true
