[package]
name = "prismdb"
description = "PrismDB command-line tools: the prismd server, the prism-shell client, and the fsck/dump utilities — one install, all binaries."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[package.metadata.wix]
upgrade-guid = "7B6769E9-E3D1-4E44-974B-4BCDC047488C"
path-guid = "F152BCFE-1C3D-4ACC-98CF-F8B31EBFC098"
license = false
eula = false

# This crate is the single shippable package: it owns every user-facing binary
# (prismd, prism-shell, prism-fsck, prism-dump), each a thin entrypoint over a
# library crate. Bundling them in one package means a release produces one
# installer / Homebrew formula / MSI that installs the whole toolset. Binaries
# are auto-discovered from src/bin/.

# Debian/Ubuntu package (cargo-deb). Asset source paths are relative to this
# crate dir; `../../` reaches the workspace root. The systemd unit + config are
# installed and the service is enabled/started by explicit maintainer scripts
# (deploy/debian/) — the unit uses DynamicUser, so no package account is needed.
# Built in .github/workflows/linux-packages.yml.
[package.metadata.deb]
maintainer = "The Prism authors <hafizmoazkhalid@gmail.com>"
copyright = "2026, The Prism authors"
license-file = ["../../LICENSE", "0"]
extended-description = """\
PrismDB is a single-node, multi-model database engine: relational tables (SQL), \
JSON-like documents, and ordered key-value pairs over one storage engine with a \
single write-ahead log and MVCC transactions. Installs the prismd server, the \
prism-shell client, and the prism-fsck/prism-dump utilities, and runs prismd as \
a systemd service (listening on localhost by default)."""
section = "database"
priority = "optional"
maintainer-scripts = "../../deploy/debian"
assets = [
    ["target/release/prismd", "usr/bin/", "755"],
    ["target/release/prism-shell", "usr/bin/", "755"],
    ["target/release/prism-fsck", "usr/bin/", "755"],
    ["target/release/prism-dump", "usr/bin/", "755"],
    ["../../deploy/prismd.service", "lib/systemd/system/prismd.service", "644"],
    ["../../deploy/prismd.conf", "etc/prismdb/prismd.conf", "644"],
    ["../../README.md", "usr/share/doc/prismdb/README.md", "644"],
]
conf-files = ["/etc/prismdb/prismd.conf"]

[dependencies]
prism-server = { workspace = true }
prism-client = { workspace = true }
prism-shell = { workspace = true }
prism-fsck = { workspace = true }
prism-protocol = { workspace = true }
prism-doc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
