[package]
name = "prismdb"
description = "PrismDB command-line tools: the prismd server, the prism-shell client, and the fsck/dump utilities - one install, all binaries."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[package.metadata.wix]
upgrade-guid = "7B6769E9-E3D1-4E44-974B-4BCDC047488C"
path-guid = "F152BCFE-1C3D-4ACC-98CF-F8B31EBFC098"
license = false
eula = false

# This crate is the single shippable package: it owns every user-facing binary
# (prismd, prism-shell, prism-fsck, prism-dump), each a thin entrypoint over a
# library crate. Bundling them in one package means a release produces one
# installer / Homebrew formula / MSI that installs the whole toolset. Binaries
# are auto-discovered from src/bin/.

# Debian/Ubuntu package (cargo-deb). Asset source paths are relative to this
# crate dir; `../../` reaches the workspace root. The systemd unit + config are
# installed and the service is enabled/started by explicit maintainer scripts
# (deploy/debian/) - the unit uses DynamicUser, so no package account is needed.
# Built in .github/workflows/linux-packages.yml.
[package.metadata.deb]
maintainer = "The Prism authors <hafizmoazkhalid@gmail.com>"
copyright = "2026, The Prism authors"
license-file = ["../../LICENSE", "0"]
extended-description = """\
PrismDB is a single-node, multi-model database engine: relational tables (SQL), \
JSON-like documents, and ordered key-value pairs over one storage engine with a \
single write-ahead log and MVCC transactions. Installs the prismd server, the \
prism-shell client, and the prism-fsck/prism-dump utilities, and runs prismd as \
a systemd service (listening on localhost by default)."""
section = "database"
priority = "optional"
maintainer-scripts = "../../deploy/debian"
assets = [
    ["target/release/prismd", "usr/bin/", "755"],
    ["target/release/prism-shell", "usr/bin/", "755"],
    ["target/release/prism-fsck", "usr/bin/", "755"],
    ["target/release/prism-dump", "usr/bin/", "755"],
    ["../../deploy/prismd.service", "lib/systemd/system/prismd.service", "644"],
    ["../../deploy/prismd.conf", "etc/prismdb/prismd.conf", "644"],
    ["../../README.md", "usr/share/doc/prismdb/README.md", "644"],
]
conf-files = ["/etc/prismdb/prismd.conf"]

# Fedora/RHEL package (cargo-generate-rpm). Run from the workspace root, so asset
# source paths are workspace-root-relative. systemd is wired by explicit
# scriptlets (RPM has no maintainer-script dir like Debian). Built in
# .github/workflows/linux-packages.yml.
[package.metadata.generate-rpm]
name = "prismdb"
summary = "Single-node multi-model database (SQL + document + key-value)."
assets = [
    { source = "target/release/prismd", dest = "/usr/bin/prismd", mode = "755" },
    { source = "target/release/prism-shell", dest = "/usr/bin/prism-shell", mode = "755" },
    { source = "target/release/prism-fsck", dest = "/usr/bin/prism-fsck", mode = "755" },
    { source = "target/release/prism-dump", dest = "/usr/bin/prism-dump", mode = "755" },
    { source = "deploy/prismd.service", dest = "/usr/lib/systemd/system/prismd.service", mode = "644" },
    { source = "deploy/prismd.conf", dest = "/etc/prismdb/prismd.conf", mode = "644", config = "noreplace" },
    { source = "README.md", dest = "/usr/share/doc/prismdb/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/prismdb/LICENSE", mode = "644", doc = true },
]
auto-req = "no"
post_install_script = """\
if command -v systemctl >/dev/null 2>&1; then
    systemctl daemon-reload >/dev/null 2>&1 || true
    if [ "$1" = "1" ]; then
        systemctl enable prismd.service >/dev/null 2>&1 || true
        systemctl start prismd.service >/dev/null 2>&1 || true
    else
        systemctl try-restart prismd.service >/dev/null 2>&1 || true
    fi
fi
"""
pre_uninstall_script = """\
if [ "$1" = "0" ] && command -v systemctl >/dev/null 2>&1; then
    systemctl stop prismd.service >/dev/null 2>&1 || true
    systemctl disable prismd.service >/dev/null 2>&1 || true
fi
"""
post_uninstall_script = """\
if command -v systemctl >/dev/null 2>&1; then
    systemctl daemon-reload >/dev/null 2>&1 || true
fi
"""

[dependencies]
prism-server = { workspace = true }
prism-client = { workspace = true }
prism-shell = { workspace = true }
prism-fsck = { workspace = true }
prism-protocol = { workspace = true }
prism-doc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
