[package]
name = "prism-fsck"
description = "Offline integrity checker: page checksums, WAL integrity, consistency."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# Library holds the (testable) checker; the `prism-fsck` binary (in the `prismdb`
# crate) prints the report.
[lib]
name = "prism_fsck"
path = "src/lib.rs"

# Only the on-disk formats, no live engine state.
[dependencies]
prism-storage = { workspace = true }
prism-wal = { workspace = true }

[dev-dependencies]
prism-testkit = { workspace = true }
