[package]
name = "prism-index"
description = "Access methods beyond heap scan: B+tree (Lehman-Yao) and extendible hash."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prism-core = { workspace = true }
