[package]
name = "prism-kv"
description = "Key-value engine: namespaces, get/put/delete/range over the record store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prism-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
prism-storage = { workspace = true }
prism-buffer = { workspace = true }
prism-wal = { workspace = true }
prism-testkit = { workspace = true }
