[package]
name = "prism-server"
description = "Network server, dispatcher, auth, and the embedded in-process API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Library form exposes the embedded API; the `prismd` binary wraps it.
[lib]
name = "prism_server"
path = "src/lib.rs"

[[bin]]
name = "prismd"
path = "src/bin/prismd.rs"

[dependencies]
prism-sql = { workspace = true }
prism-doc = { workspace = true }
prism-kv = { workspace = true }
prism-protocol = { workspace = true }
# The embedded API assembles the shared storage stack (disk + WAL + buffer pool
# + transaction manager + record store) and drives it directly, so it depends on
# the lower layers as well as the three engines. Downward only — no cycle.
prism-core = { workspace = true }
prism-storage = { workspace = true }
prism-buffer = { workspace = true }
prism-wal = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
scrypt = { workspace = true }

[dev-dependencies]
prism-testkit = { workspace = true }
