[package]
name = "prism-sql"
description = "Relational engine: parser, binder, planner, Volcano executor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prism-core = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
prism-storage = { workspace = true }
prism-buffer = { workspace = true }
prism-wal = { workspace = true }
prism-testkit = { workspace = true }
proptest = { workspace = true }
