[package]
name = "prism-storage"
description = "Disk manager, page format, and page I/O. The storage foundation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crc32fast = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
