[package]
name = "prism-testkit"
description = "Reusable test harnesses shared across crates. Not published."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
prism-storage = { workspace = true }
prism-wal = { workspace = true }
prism-buffer = { workspace = true }
