[package]
name = "prism-wal"
description = "Write-ahead log: record format, group commit, replay."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prism-storage = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
