[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prismdb"
version = "0.1.0"
description = "Pure-Python client for PrismDB over the binary wire protocol (no native build)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "The Prism authors" }]
keywords = ["prismdb", "prism", "database", "client", "driver", "sql", "document", "key-value", "multi-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Front-Ends",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HafizMMoaz/prism-db/tree/main/sdks/python#readme"
Repository = "https://github.com/HafizMMoaz/prism-db"
Issues = "https://github.com/HafizMMoaz/prism-db/issues"

[tool.setuptools]
packages = ["prismdb"]

[tool.setuptools.package-data]
prismdb = ["py.typed"]
